--- a/react/src/index.css
+++ b/react/src/index.css
@@ -105,6 +105,40 @@ textarea:focus {
     text-align: center;
 }
 
+.pagination {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.pagination button {
+    padding: 8px 16px;
+    margin: 0 5px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    outline: none;
+}
+
+.pagination button:hover {
+    background-color: #0056b3;
+}
+
+.pagination button:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+}
+
+.pagination span {
+    margin: 0 10px;
+    font-size: 14px;
+    color: #555;
+}
+
+
 .card {
     background-color: #FFF;
     border-radius: 0.5rem;
@@ -251,7 +285,8 @@ textarea:focus {
 /* Login/Signup form */
 
 #defaultLayout {
-    display: flex;
+    margin: 0;
+    padding: 0;
 }
 
 #defaultLayout .content {
@@ -386,9 +421,9 @@ textarea:focus {
     }
 
 
-    #users-table {
-        max-width: 700px;
-    }
+    /* #users-table {
+        width: 80%;
+    } */
 
     .btn,
     .btn-add,
@@ -408,9 +443,6 @@ textarea:focus {
         margin-left: 0;
     }
 
-    #users-table {
-        max-width: 700px;
-    }
 
     #defaultLayout main {
         padding: 1.5rem;
@@ -424,9 +456,6 @@ textarea:focus {
         padding: 10px;
     }
 
-    #users-table {
-        max-width: auto;
-    }
 }
 /* Medium devices (tablets, 600px to 768px) */
 @media (max-width: 576px) {
@@ -434,6 +463,7 @@ textarea:focus {
     .login-signup-form {
         padding: 10px;
     }
+
 }
 
 /* Small devices (phones, 600px and down) */
@@ -447,10 +477,6 @@ textarea:focus {
         font-size: 12px;
     }
 
-
-    #users-table {
-        max-width: 330px;
-    }
 
     .btn,
     .btn-add,
