--- a/react/src/pages/Dashboard/index.css
+++ b/react/src/pages/Dashboard/index.css
@@ -10,7 +10,7 @@
     align-items: flex-start;
     gap: 10px;
 }
-.container{
+.container-dashboard{
     display: grid;
     grid-template-columns: 1fr 1fr ;
     gap: 10px;
@@ -121,7 +121,7 @@
         grid-template-columns: 1fr;
     }
 
-.container{
+.container-dashboard{
     display: grid;
     grid-template-columns: 1fr ;
     gap: 10px;
